--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -2,58 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-/* [data-theme='dark'] {
-  --background: #000;
-  --text-primary: #fff;
-  --text-secondary: #8e05c2;
-  --accent: #8e05c2;
-  --border: #808080;
-  --form-bg: #191919;
-} */
-
 .dark-mode {
-  background-color: #121212;
-  color: #ffffff;
+  background-color: black;
+  color: white;
 }
-
-/* .dark-mode button {
-  background-color: #1e1e1e;
-  color: #ffffff;
-}  */
-.mode-toggle-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  height: 10 px;
-  width: auto;
-}
-
-
- :root {
-  --background-color: #fff;
-  --text-color: #333;
-}
-
-:root {
-  --background-color: #333;
-  --text-color: #fff;
-} 
-
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: inherit; /* Ensure text color is inherited */
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
 * {
   box-sizing: border-box;
 }
+/* 
+p,
+h1, h2, h3, h4, h5, h6,
+li {
+  color: inherit;
+} */
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
@@ -64,31 +39,34 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+    @apply bg-[#ecf0f3] tracking-wide; 
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @apply font-bold
+    @apply font-bold;
   }
 
   h1 {
-    @apply text-4xl sm:text-5xl md:text-6xl font-[Raleway]
+    @apply text-4xl sm:text-5xl md:text-6xl font-[Raleway];
   }
 
   h2 {
-    @apply text-3xl sm:text-4xl
+    @apply text-3xl sm:text-4xl;
   }
-  
+
   li {
-    @apply cursor-pointer
+    @apply cursor-pointer;
   }
 
   .pink_button {
-    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#ff758f] to-[#c9184a] text-white
+    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#ff758f] to-[#c9184a] text-white;
   }
 }
 
-
 .text {
-  @apply text-[#5651e5] 
+  @apply text-[#5651e5];
+}
+
+.gray {
+  @apply text-gray-600
 }
