--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -59,7 +59,7 @@ html {
   }
 
   .pink_button {
-    @apply shadow-md shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#ff758f] to-[#c9184a] text-white;
+    @apply shadow-md shadow-gray-400 rounded-xl uppercase bg-[#F652A0] text-white;
   }
 }
 
@@ -70,3 +70,4 @@ html {
 .gray {
   @apply text-gray-600
 }
+
